package NYT.NScheduler.NProto;

import "yt/core/misc/proto/guid.proto";
import "yt/client/node_tracker_client/proto/node.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqDumpInputContext
{
    required NYT.NProto.TGuid job_id = 1;
    required string path = 2;
}

message TRspDumpInputContext
{ }

message TReqGetJobNode
{
    required NYT.NProto.TGuid job_id = 1;
}

message TRspGetJobNode
{
    required NYT.NNodeTrackerClient.NProto.TNodeDescriptor node_descriptor = 1;
}

message TReqStrace
{
    required NYT.NProto.TGuid job_id = 1;
}

message TRspStrace
{
    required string trace = 1;
}

message TReqSignalJob
{
    required NYT.NProto.TGuid job_id = 1;
    required string signal_name = 2;
}

message TRspSignalJob
{ }

message TReqAbandonJob
{
    required NYT.NProto.TGuid job_id = 1;
}

message TRspAbandonJob
{ }

message TReqPollJobShell
{
    required NYT.NProto.TGuid job_id = 1;
    // Parameters in YSON format.
    required string parameters = 2;
}

message TRspPollJobShell
{
    // Result in YSON format.
    required string result = 1;
}

message TReqAbortJob
{
    required NYT.NProto.TGuid job_id = 1;
    optional int64 interrupt_timeout = 2;
}

message TRspAbortJob
{ }

////////////////////////////////////////////////////////////////////////////////
